--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
+APP_NAME=CodeWithKyrian
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -11,6 +11,8 @@ APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
+
+ASSET_URL="${APP_URL}"
 
 BCRYPT_ROUNDS=12
 
@@ -22,7 +24,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=laravel
+DB_DATABASE=/var/www/html/.infrastructure/volume_data/sqlite/database.sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
@@ -62,3 +64,17 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+PLAUSIBLE_TRACKING_URL=
+PLAUSIBLE_BASE_URL=
+PLAUSIBLE_DOMAIN=
+PLAUSIBLE_API_KEY=
+
+TORCHLIGHT_TOKEN=
+TORCHLIGHT_THEME=
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
