fix: Remove build dependency

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy:
-    needs: build
+    # needs: build
     runs-on: ubuntu-24.04
     steps:
       - uses: serversideup/github-action-docker-swarm-deploy@v2
