--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,15 +1,10 @@
 version: '3.8'
 services:
-  mysql:
-    networks:
-      - ci
-    environment:
-        MYSQL_ROOT_PASSWORD: "rootpassword"
-        MYSQL_DATABASE: "laravel_testing"
-        MYSQL_USER: "mysqluser"
-        MYSQL_PASSWORD: "mysqlpassword"
 
-  php:
+  app:
+    build:
+      context: .
+      target: ci
     networks:
       - ci
     volumes:
@@ -17,19 +12,12 @@ services:
     working_dir: /var/www/html/
     environment:
       AUTORUN_ENABLED: false
-    depends_on:
-      - mariadb
 
-  node:
-    image: node:20
+  bun:
+    image: 'oven/bun:alpine'
     volumes:
-      - .:/usr/src/app/
-    working_dir: /usr/src/app/
-    networks: 
-      - ci
-
-  mailpit:
-    image: axllent/mailpit
+      - ./:/home/bun/app:cached
+    working_dir: /home/bun/app/
     networks:
       - ci
 
