--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -28,7 +28,7 @@ services:
       - source: traefik
         target: /etc/traefik/traefik.yml
 
-  app:
+  php:
     image: ${SPIN_IMAGE_DOCKERFILE} # 👈 Change this if you're not using `spin deploy`
     environment:
       PHP_OPCACHE_ENABLE: "1"
@@ -73,7 +73,7 @@ services:
 
 
   # ssh:
-  #   # We use an SSH image so we can securely tunnel into the Docker network with 
+  #   # We use an SSH image so we can securely tunnel into the Docker network with
   #   # tools like Sequel Pro, TablePlus, Sequel Ace, etc.
   #   # Learn more how to secure your tunnel here: https://github.com/serversideup/docker-ssh
   #   image: serversideup/docker-ssh
@@ -82,7 +82,7 @@ services:
   #       published: 2222
   #       mode: host
   #   environment:
-  #     # Change the keys below to your own keys 
+  #     # Change the keys below to your own keys
   #     AUTHORIZED_KEYS: >
   #       "# Start Keys
   #        ssh-ed25519 1234567890abcdefghijklmnoqrstuvwxyz user-a
