--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -144,6 +144,10 @@ jobs:
         if: steps.public-build-restore.outputs.cache-hit != 'true'
         run: exit 1
 
+      - name: Create .env file from secret
+        run: |
+          echo "${{ secrets.ENV_PRODUCTION_BASE64 }}" | base64 -d > .env
+
       - name: 🔐 Login to GHCR
         uses: docker/login-action@v3
         with:
