--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,6 @@ on:
     branches:
       - main
 env:
-  DOCKER_COMPOSE_CMD: docker compose -f docker-compose.yml -f docker-compose.ci.yml
   STACK_NAME: spin-production
   SPIN_IMAGE_DOCKERFILE: ghcr.io/codewithkyrian/blog:latest
   SPIN_APP_DOMAIN: codewithkyrian.com
@@ -27,21 +26,8 @@ jobs:
           key: ${{ runner.os }}-composer-vendor-${{ hashFiles('composer.lock') }}
 
       - if: ${{ steps.composer-vendor-restore.outputs.cache-hit != 'true' }}
-        name: List the composer packages
-        continue-on-error: true
-        run: |
-          $DOCKER_COMPOSE_CMD \
-          run \
-          php \
-          composer show --locked
-
-      - if: ${{ steps.composer-vendor-restore.outputs.cache-hit != 'true' }}
         name: Install Composer dependencies
-        run: |
-          $DOCKER_COMPOSE_CMD \
-          run \
-          php \
-          composer install --optimize-autoloader --no-interaction --no-progress --no-ansi --ignore-platform-req=ext-exif
+        run: composer install --optimize-autoloader --no-interaction --no-progress --no-ansi --ignore-platform-req=ext-exif
 
       - if: ${{ steps.composer-vendor-restore.outputs.cache-hit != 'true' }}
         name: Upload composer cache
