fix: Append group

--- a/.spin.yml
+++ b/.spin.yml
@@ -46,6 +46,7 @@ users:
     name: Kyrian Obikwelu
     state: present
     groups: ['adm','sudo','docker']
+    append: yes
     password: "$6$nCL/vGAqOlx3$JyLg730RpLbjxE7snt8GDvKYKLkgQ37dvRqVCPqWG3AOez2IZi.Ha/P95J4Lm.TWxpeclthXTSxPSkhxWHBCD1"
     shell: "/bin/bash"
     authorized_keys:
